--- a/Cooking with Leftovers(E)/Layouts/m6_1_main(e).xml
+++ b/Cooking with Leftovers(E)/Layouts/m6_1_main(e).xml
@@ -315,8 +315,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>187</x>
-                        <y>417</y>
+                        <x>277</x>
+                        <y>407</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -367,8 +367,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>167</x>
-                        <y>632</y>
+                        <x>520</x>
+                        <y>798</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -419,8 +419,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>175</x>
-                        <y>852</y>
+                        <x>243</x>
+                        <y>780</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -471,8 +471,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>168</x>
-                        <y>1071</y>
+                        <x>277</x>
+                        <y>989</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -575,7 +575,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>713</x>
+                        <x>631</x>
                         <y>398</y>
                         <z>0</z>
                         <width>100</width>
@@ -627,8 +627,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>748</x>
-                        <y>621</y>
+                        <x>758</x>
+                        <y>590</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -679,8 +679,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>762</x>
-                        <y>874</y>
+                        <x>746</x>
+                        <y>786</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -731,8 +731,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>764</x>
-                        <y>1065</y>
+                        <x>702</x>
+                        <y>975</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -862,8 +862,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>224</x>
-                        <y>397</y>
+                        <x>368</x>
+                        <y>373</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -914,8 +914,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>234</x>
-                        <y>583</y>
+                        <x>500</x>
+                        <y>776</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -966,8 +966,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>228</x>
-                        <y>774</y>
+                        <x>269</x>
+                        <y>776</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -1018,8 +1018,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>215</x>
-                        <y>973</y>
+                        <x>373</x>
+                        <y>959</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -1122,7 +1122,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>733</x>
+                        <x>618</x>
                         <y>384</y>
                         <z>0</z>
                         <width>100</width>
@@ -1226,8 +1226,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>698</x>
-                        <y>772</y>
+                        <x>719</x>
+                        <y>766</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -1278,8 +1278,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>716</x>
-                        <y>975</y>
+                        <x>632</x>
+                        <y>971</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -1424,6 +1424,160 @@
                         <z>0</z>
                         <width>40</width>
                         <height>40</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="m6_1_lulImABG" uid="36">
+                    <properties>
+                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <fud></fud>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>444</x>
+                        <y>599</y>
+                        <z>0</z>
+                        <width>100</width>
+                        <height>200</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="m6_1_fud" uid="35">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <hint>false</hint>
+                        <fud1>Starch</fud1>
+                        <fud2>Root Veggie</fud2>
+                        <fud3></fud3>
+                        <inPot>false</inPot>
+                        <name>MashedPotatoe</name>
+                    </instance-variables>
+                    <behavior-instances>
+                        <behavior-instance type="DragDrop">
+                            <properties>
+                                <axes>Both</axes>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                        <behavior-instance type="Physics">
+                            <properties>
+                                <immovable>No</immovable>
+                                <collision-mask>Use collision polygon</collision-mask>
+                                <prevent-rotation>No</prevent-rotation>
+                                <density>1</density>
+                                <friction>0.5</friction>
+                                <elasticity>0.2</elasticity>
+                                <linear-damping>0</linear-damping>
+                                <angular-damping>0.01</angular-damping>
+                                <bullet>No</bullet>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>439</x>
+                        <y>590</y>
+                        <z>0</z>
+                        <width>100</width>
+                        <height>200</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="m6_1_lulImABG" uid="38">
+                    <properties>
+                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <fud></fud>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>460</x>
+                        <y>194</y>
+                        <z>0</z>
+                        <width>100</width>
+                        <height>200</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="m6_1_fud" uid="37">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <hint>false</hint>
+                        <fud1>Red Meat</fud1>
+                        <fud2>Starch</fud2>
+                        <fud3></fud3>
+                        <inPot>false</inPot>
+                        <name>Pierogies</name>
+                    </instance-variables>
+                    <behavior-instances>
+                        <behavior-instance type="DragDrop">
+                            <properties>
+                                <axes>Both</axes>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                        <behavior-instance type="Physics">
+                            <properties>
+                                <immovable>No</immovable>
+                                <collision-mask>Use collision polygon</collision-mask>
+                                <prevent-rotation>No</prevent-rotation>
+                                <density>1</density>
+                                <friction>0.5</friction>
+                                <elasticity>0.2</elasticity>
+                                <linear-damping>0</linear-damping>
+                                <angular-damping>0.01</angular-damping>
+                                <bullet>No</bullet>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>496</x>
+                        <y>173</y>
+                        <z>0</z>
+                        <width>100</width>
+                        <height>200</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
